# Hackathon

./: .gitignore  CLAUDE.md  README.md  api_contract_validator_postman.json  baseline_72b_v2_scores.json  baseline_7b_scores.json  baseline_scores.json  trained_scores.json
api_contract_validator/: .env.example  BLOG.md  Dockerfile  ENTERPRISE_CONTRACT_GUARDIAN_STORY.md  README.md  TECHNICAL_ARCHITECTURE.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml
api_contract_validator/results/: TRAINING_RUN_PROOF.md  baseline_table.md  training_full_log.txt  training_state.json
api_contract_validator/server/: __init__.py  app.py  environment.py  fix_validator.py  impact_tracer.py  logging_setup.py  requirements.txt  rewards.py  service_graph.py  spec_generator.py
api_contract_validator/tests/: test_environment.py
api_contract_validator/training/: README.md  baseline.py  grpo_colab.ipynb  plot.py  run_in_hf_jobs.py  run_trained_inference.py  train.py
